Chat overflow fix

--- a/code/UI/HUD/Chat/Chat.razor.scss
+++ b/code/UI/HUD/Chat/Chat.razor.scss
@@ -59,7 +59,6 @@ Chat {
         height: 90%;
         padding: 10px;
         font-size: 24px;
-        overflow-y: hidden;
 
         .lines {
             display: flex;
@@ -68,10 +67,12 @@ Chat {
             min-height: 100%;
             justify-content: flex-end;
 
+            overflow-y: scroll;
 
             .message-container {
                 display: flex;
                 flex-wrap: wrap;
+                flex-shrink: 0;
 
                 .author {
                     margin-right: 10px;
